[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Invader.png" type="Texture" id=1]
[ext_resource path="res://Actors/Enemies/01/Enemy01.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 27, 25 )

[node name="RigidBody2D" type="RigidBody2D" groups=["enemy"]]
z_index = -1
collision_layer = 2
gravity_scale = 0.0
contacts_reported = 2
contact_monitor = true
script = ExtResource( 2 )

[node name="Invader" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 1.6, 1.5 )

[connection signal="body_entered" from="." to="." method="_on_RigidBody2D_body_entered"]
[connection signal="viewport_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_entered"]
[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
